Fix position of user title in top navbar
User title in top navbar user menu was too close to profile image,
margin added.

--- a/css/theme.css
+++ b/css/theme.css
@@ -87,6 +87,7 @@ input[type=select] {
 }
 #topbar-first .account .user-title {
   text-align: right;
+  margin-right:10px;
 }
 #topbar-first .account .user-title span {
   color: #d7d7d7;
